2014-04-20 arne

	* add initial Mac OS X Retina Display support
	* add CDrawContext::Transform to transform any of the CDrawContext draw commands
	* add CDrawContext::drawLine and mark the old methods (moveTo, lineTo) as deprecated
	* add CDrawContext::drawLines which takes a vector of point pairs and mark the old method as deprecated
	* add CDrawContext::drawPolygon which takes a vector of points and mark the old method as deprecated

2014-04-13 arne

	* fix a few issues found with -fsanitize=undefined-trap
	* some refactorings
	* add virtual key code to CMenuItem
	* add UTF8StringView helper class
	* fix CDataBrowser selection change via key input (modifier was not checked)
	
2014-04-02 arne

	* fix double click style for CTextEdit
	* UIDescription: add variable substitution for all attributes when creating views (thanks to Wolfram Franke for the inital version)

2014-03-29 arne

	* add c++11 lambda alternatives for callbacks in CFileSelector::run(), CVSTGUITimer, CParamDisplay::setValueToStringFunction, CTextEdit::setStringToValueFunction and CCommandMenuItem::setActions
	* some changes to UIDescritpion interfaces to use more const methods
	
2014-02-21 arne

	* add CBaseObject::beforeDelete() virtual method, which will be called directly before the object is deleted.
	* add IViewListener::viewWillDelete () method
	
2014-02-19 arne

	* fix CDrawContext::restoreGlobalState on Direct2D
	* rewrite CDrawContextState to use the stack instead of the heap to store them

2014-02-05 arne

	* add IViewListener interface/adapter
	
2014-01-22 arne

	* CDrawContext::createTextPath(..) implementation for Direct2D and GDI+

2014-01-02 arne

	* add CDrawContext::createTextPath(..) and Quartz implementation
	* add text rotation to CParamDisplay
	* fix console output message about font creation on OS X 10.9

2013-12-30 arne

	* change CGradient to support more than only a start and end color
	* add CDrawContext::fillRadialGradient method