@@ -40,7 +40,7 @@
 #include "controls/ccontrol.h"
 
 #include <algorithm>
-#include <assert.h>
+#include <cassert>
 
 namespace VSTGUI {
 
